@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.552 2017/11/10 15:08:08 fhajny Exp $
+# $NetBSD: Makefile,v 1.553 2017/12/08 12:18:01 adam Exp $
 
 COMMENT=	Databases
 
@@ -279,7 +279,6 @@ SUBDIR+=	poco-data
 SUBDIR+=	poco-data-mysql
 SUBDIR+=	poco-data-odbc
 SUBDIR+=	poco-data-sqlite
-SUBDIR+=	postgresql-pgbench
 SUBDIR+=	postgresql-pgroonga
 SUBDIR+=	postgresql-pljava
 SUBDIR+=	postgresql-postgis2
