@@ -1,3 +1,0 @@
-pgbench is a popular benchmarking tool used by many developers
-and hackers to do quick performance test with PostgreSQL on a
-system setup.
