@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2012/07/16 15:32:47 asau Exp $
-bin/pgbench
